# enso_final_project

./: .gitignore  LICENSE  README.md  phase1_working.py  pyproject.toml  research_notes.md  slides.html  slides.qmd
enso_toolkit/: __init__.py  core.py  io.py  utils.py
enso_toolkit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: dev_exploration.ipynb  quickstart.py
